@@ -27,6 +27,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #20536: the statistics module now correctly handle Decimal instances
+  with positive exponents
+
 - Issue #18805: the netmask/hostmask parsing in ipaddress now more reliably
   filters out illegal values and correctly allows any valid prefix length.
 
